Updated git ignore file

--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,8 @@ com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 fabric.properties
+
+# Files added by project contributors
+.idea/
+src/
+target/
